[gd_scene load_steps=14 format=2]

[ext_resource path="res://Enemies/Enemy_easy.png" type="Texture" id=1]
[ext_resource path="res://Enemies/Enemy_easy.gd" type="Script" id=2]
[ext_resource path="res://Stats.tscn" type="PackedScene" id=3]
[ext_resource path="res://Boxes/Hurtbox.tscn" type="PackedScene" id=4]

[sub_resource type="CapsuleShape2D" id=1]
radius = 8.0
height = 30.0

[sub_resource type="CapsuleShape2D" id=2]
height = 28.0

[sub_resource type="Animation" id=7]
resource_name = "IdleLeft"
length = 0.7
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 15, 15, 15, 16, 17, 18, 19 ]
}

[sub_resource type="Animation" id=8]
resource_name = "IdleRight"
length = 0.7
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 10, 10, 10, 11, 12, 13, 14 ]
}

[sub_resource type="Animation" id=3]
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ 0 ]
}

[sub_resource type="Animation" id=4]
resource_name = "RunRight"

[sub_resource type="Animation" id=6]
resource_name = "WalkLeft"
length = 0.5
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3, 0.4 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 9, 8, 7, 6, 5 ]
}

[sub_resource type="Animation" id=5]
resource_name = "WalkRight"
length = 0.5
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3, 0.4 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 0, 1, 2, 3, 4 ]
}

[sub_resource type="CapsuleShape2D" id=9]
height = 28.0

[node name="Enemy_easy" type="KinematicBody2D"]
collision_layer = 0
collision_mask = 4
script = ExtResource( 2 )

[node name="Sprite" type="Sprite" parent="."]
scale = Vector2( 0.232, 0.232 )
texture = ExtResource( 1 )
hframes = 5
vframes = 4

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( 0, 2 )
shape = SubResource( 1 )

[node name="RayCast2D_left" type="RayCast2D" parent="."]
position = Vector2( -15, 0 )
enabled = true
cast_to = Vector2( 0, 30 )
collision_mask = 2

[node name="RayCast2D_right" type="RayCast2D" parent="."]
position = Vector2( 15, 0 )
enabled = true
cast_to = Vector2( 0, 30 )
collision_mask = 2

[node name="PlayerDetector" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="PlayerDetector"]
position = Vector2( 0, 1 )
shape = SubResource( 2 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
anims/IdleLeft = SubResource( 7 )
anims/IdleRight = SubResource( 8 )
anims/RESET = SubResource( 3 )
anims/RunRight = SubResource( 4 )
anims/WalkLeft = SubResource( 6 )
anims/WalkRight = SubResource( 5 )

[node name="Stats" parent="." instance=ExtResource( 3 )]

[node name="Hurtbox" parent="." instance=ExtResource( 4 )]
collision_layer = 2048

[node name="CollisionShape2D" parent="Hurtbox" index="0"]
position = Vector2( 0, 1 )
shape = SubResource( 9 )

[connection signal="body_entered" from="PlayerDetector" to="." method="_on_PlayerDetector_body_entered"]
[connection signal="body_exited" from="PlayerDetector" to="." method="_on_PlayerDetector_body_exited"]
[connection signal="area_shape_entered" from="Hurtbox" to="." method="_on_Hurtbox_area_shape_entered"]

[editable path="Hurtbox"]
